--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "tallin",
   "version": "1.0.0",
+  "repository": {
+    "url": "git+https://github.com/ilin-dmitry/tallin.git"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Dmitry Ilin",
   "license": "ISC",
@@ -20,6 +25,7 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "webpack-dev-server": "^4.13.3"
   }
 }
